--- a/practica01css 2/css/estilos.css
+++ b/practica01css 2/css/estilos.css
@@ -1,5 +1,41 @@
 body{
-	border: 1px solid red;
+	border: 2px solid red;
 	margin: 0px auto;
 	max-width: 1024px;
+
+}
+header{
+	background-color: #d8eaef;
+}
+header nav{
+	background: #056ebf;
+	border-radius: 5px;
+	margin: 0px auto;
+	padding: 1px 0px;
+	width: 99%;
+
+}
+header nav form{
+float: right;
+margin-top: -40px;
+margin-right: 20px;
+}
+
+header nav form input{
+	border-radius: 5px;
+}
+header nav form input[type="button"]{
+	background: #5dc13b;
+	border: 1px solid #5dc13b;
+	color: white;
+}
+header nav ul li{
+	/*border: 1px solid blue;*/
+	color: white;
+	display:inline-block;
+	margin-right: 20px;
+}
+
+#logo{
+	margin-top: -150px;
 }
