--- a/practica04css3/css/estilos.css
+++ b/practica04css3/css/estilos.css
@@ -2,39 +2,120 @@ body{
 	font-size: 16px; /*1em*/
 	margin: 0px auto;/*Centrado pantalla*/
 	max-width: 1078px;/*cliente*/
-	min-width: 1078;
+	min-width: 1078px;
+	color: #a8b78e;
 }
 header{
 	margin-top: 15px;
 }
 header nav ul li{
+	color: black;
 	display: inline-block;
 	margin-right: 15px;
 	font-weight: bold;
 	margin-top: 50px;
 }
+#bicicleta{
+	margin-top: 15px;
+}
 #gotoshop{
 	float: right;
-	margin-top: 60px;
-	margin-right: 155px;
+	margin-top: 55px;
+	margin-right: 200px;
 }
 #buy{
 	float: right;
 	margin-top: 130px;
-	
+	width: 60px;
+	height: 60px;	
 }
 #roja{
 	float: right;
-	margin-top: 5px;
-	margin-right: -245px;
+	margin-top: 6px;
+	margin-right: -355px;
 }
 #sigue{
 	float: right;
-	margin-top: 5px;
-	margin-right: -290px;
+	margin-top: 6px;
+	margin-right: -400px;
 }
 #mundo{
 	float: right;
-	margin-top: 2px;
-	margin-right: -340px;
+	margin-top: 3px;
+	margin-right: -450px;
+}
+#Seccionuno {
+	margin-top: 50px;
+}
+#article1{
+	width: 590px;
+	height: 515px;
+	margin-right: 10px;
+	display: inline-block;
+	padding-left: 10px;
+}
+#article2{
+	width: 430px;
+	height: 515px;
+	margin-right: 5px;
+	display: inline-block;
+	vertical-align: top;
+}
+#rayaprimera{
+	border-style: dashed;
+	color: #939ba3;
+}
+#article11{
+	text-align: center;
+}
+.Letragrande{
+	font-size: 4em;
+	font-weight: bold;
+	color: #111111;
+}
+.Letragrandeverde{
+	font-size: 4em;
+	font-weight: bold;
+	color: #74f43c;
+}
+#rayasegunda{
+	border-style: dashed;
+	color: #939ba3;
+}
+#primervideo{
+	width: 270px;
+	height: 180px;
+	margin-right: 45px;
+}
+#segundovideo{
+	width: 270px;
+	height: 180px;
+}
+#bike{
+	float: right;
+	width: 400px;
+	height: 500px;
+}
+#years{
+	margin-top: -190px;
+	width: 140px;
+	height: 90px;
+}
+footer{
+		margin-top: 50px;
+		padding-left: 10px;
+
+}
+footer article{
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 15px;
+	width: 18%;
+	height: 50%;
+
+}
+#poderoso{
+	width: 95px;
+	height: 40px;
+	float: left;
 }
